# agentflow

./: .coverage  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LEVEL_UP.md  LICENSE  PASS2_RESOLUTION_REPORT.md  PUBLIC_API.md  README.md  SECURITY.md  chat.md  commit_msg.txt  mkdocs.yml  pyproject.toml  tmpclaude-6b68-cwd
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmarks/: parallel_speedup.py
docs/: getting-started.md  index.md  reference.md
docs/guides/: cost-streaming.md  memory.md  observability.md  tools.md
examples/: code_reviewer.py  cpp_build_pipeline.py  drone_telemetry_agent.py  earnings_triage.py  market_analysis_crew.py  memory_chat_agents.py  research_crew.py  research_react_agent.py  robotics_mqtt_agent.py  streaming_and_cost.py  tool_agent.py
examples/notebooks/: parallel_execution_demo.ipynb  quickstart.ipynb
src/agentflow/: __init__.py  agent.py  cache.py  distillation.py  events.py  exceptions.py  hitl.py  llm.py  logging.py  memory.py  observability.py  pipeline.py  pricing.py  rate_limiter.py  sandbox.py  swarm.py  swarm_routing.py  tools.py  triggers.py  types.py
src/agentflow/contrib/: __init__.py  otel.py
src/agentflow/cpp_core/: bindings.cpp  dag_engine.cpp  dag_engine.h
tests/: test_agent.py  test_cache.py  test_conditional.py  test_hitl.py  test_llm.py  test_logging.py  test_long_term_memory.py  test_memory.py  test_observability.py  test_parallel.py  test_pipeline.py  test_pricing.py  test_rate_limiter.py  test_retry.py  test_sandbox.py  test_streaming.py  test_swarm.py  test_swarm_routing.py  test_tools.py  test_triggers.py
