[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentflowkit"
version = "0.2.0"
description = "Lightweight multi-agent AI pipeline framework with parallel DAG execution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "KaramQ6" }]
keywords = ["ai", "agents", "multi-agent", "llm", "pipeline", "async", "dag", "parallel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "build",
]

[project.urls]
Homepage = "https://github.com/KaramQ6/agentflow"
Repository = "https://github.com/KaramQ6/agentflow"
Changelog = "https://github.com/KaramQ6/agentflow/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/KaramQ6/agentflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["examples/"]

[tool.coverage.run]
source = ["agentflow"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
